--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "node-fetch": "^3.3.2"
   },
   "author": "david-uzondu",
